# reasoning-traces-generation

./: inference.py  pyproject.toml
