[project]
name = "reasoning-traces-generation"
version = "0.1.0"
description = "script to generate thinking traces for verifiable math reasoning "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]
